# FASTAPI_demo

./: .gitignore
api/: main.py  pyproject.toml
api/utils/: model_func.py
front/: pyproject.toml  streamlit.py
